@@ -153,6 +153,30 @@
             echo "</tr>";
         
             echo "<tr>";
+                echo "<td>";
+                    echo form_label('Senderemail', 'senderemail');
+                echo "</td>";
+                echo "<td>";
+                // echo "<br />";
+                    echo form_input($senderemail);
+                echo "</td>";
+                echo "<td>";
+                echo " Example : fo@igntu.ac.in";
+                echo "</td>";
+            echo "</tr>";
+            echo "<tr>";
+                echo "<td>";
+                    echo form_label('Modulename', 'modulename');
+                echo "</td>";
+                echo "<td>";
+                // echo "<br />";
+                    echo form_input($modulename);
+                echo "</td>";
+                echo "<td>";
+                echo " Example : Account Section";
+                echo "</td>";
+            echo "</tr>";
+            echo "<tr>";
             echo "<td>";
             echo "</td>";
                 echo "<td>";
