@@ -101,6 +101,14 @@ echo "<ul class=\"sf-menu\">";
 				echo "</ul>";
 			echo "</li>";
 			echo "<li>";
+				echo "<a href=" . ">Archives</a>";
+				echo "<ul>";
+					echo "<li>";
+						echo anchor('archive/feesmastera', 'Fees Master', array('title' => 'Fees Master'));
+					echo "</li>";
+				echo "</ul>";
+			echo "</li>";
+			echo "<li>";
 				echo "<a href=" . ">Profile</a>";
 				 echo "<ul>";
 					echo "<li>";
